# polars-deltalake

./: .gitignore  Cargo.toml  README.md  Untitled-1.ipynb
.github/workflows/: CI.yml
python/: Cargo.toml  Makefile  README.md  pyproject.toml  requirements.txt
python/polars_deltalake/: __init__.py  _internal.pyi
python/src/: error.rs  lib.rs
python/tests/: test_delta_read.py
