[package]
name = "polars_deltalake"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars_deltalake"
crate-type = ["cdylib"]

[dependencies]
polars = {   workspace = true, features = ["parquet"]}
polars-lazy = { workspace = true, features = ["parquet"]}
polars-arrow = { workspace = true, features = ["arrow_rs"]}
polars-plan = {workspace = true, features = ["parquet"]}
arrow-schema ={ version = "*"}
pyo3 = { workspace = true, features = ["extension-module"] }
pyo3-polars = { workspace = true, features = ["derive", "lazy"] }
serde = { workspace = true, features = ["derive"] }
deltalake = { workspace = true}
tokio = { workspace = true, features = ["rt-multi-thread"] }
thiserror = { version = "1" }


[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"