[package]
name = "polars_deltalake"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars_deltalake"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.38.1", features = ["parquet", "cloud", "azure"]}
polars-lazy ={ version = "0.38.1",  features = ["parquet","cloud"]}
polars-plan = {version = "0.38.1", features = ["parquet","cloud"]}
polars-arrow = {version = "0.38.1", features = ["arrow_rs"]}
arrow-schema ={ version = "*"}
pyo3 = { workspace = true, features = ["extension-module"] }
pyo3-polars = { workspace = true, features = ["derive", "lazy"] }
serde = { workspace = true, features = ["derive"] }
deltalake = { workspace = true, features = ["azure", "s3", "gcs"]}
tokio = { workspace = true, features = ["rt-multi-thread"] }
thiserror = { version = "1" }


[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"