[package]
name = "polars_deltalake"
version = "0.2.0"
edition = "2021"

[lib]
name = "polars_deltalake"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.38.2", features = ["parquet", "cloud", "azure", "aws", "gcp", "async"]}
polars-lazy ={ version = "0.38.2",  features = ["parquet","cloud", "async", "diagonal_concat"]}
polars-plan = {version = "0.38.2", features = ["parquet","cloud", "async"]}
polars-arrow = {version = "0.38.2", features = ["arrow_rs"]}
arrow-schema ={ version = "50.0.0"}
arrow-array = { version = "50.0.0", features = ["chrono-tz"]}
pyo3 = { version = "0.20.3", features = ["extension-module", "abi3", "abi3-py38"] }
pyo3-polars = { version = "0.12.0", features = ["derive", "lazy"] }
serde = { version = "*", features = ["derive"] }
deltalake = { version = "0.17.1", features = ["azure", "s3", "gcs"]}
tokio = { version = "*", features = ["rt-multi-thread"] }
thiserror = { version = "1" }

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
